welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:5: error: not found: value j
	if(nums.length==1 && nums(j)==value){
                                  ^indexOfValue:9: error: type mismatch;
 found   : Unit
 required: Int
	for (j<-0 to (nums.length-1)){
              ^