welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	if(nums.length==0){
		return -1;
	}
	if(nums.length==1 && nums(j)==value){
			return 0;
	}
	
	for (j<-0 to (nums.length-1)){
		if(nums(j)==value){
			return j
		}else{
			return -1
		}
	}
	
}
	


